# seeyou-cub

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  renovate.json
.github/workflows/: ci.yml  release.yml
benches/: high_level_reader.rs  high_level_writer.rs  low_level_reader.rs  low_level_writer.rs
docs/: CUB_file_format.md
docs/plans/: 001-low-level-reader.md
examples/: basic.rs  create-map.rs
examples/snapshots/: create_map__tests__airspace_to_geojson_feature.snap
src/: byte_string.rs  convert.rs  error.rs  lib.rs  reader.rs  writer.rs
src/new_api/: convert.rs  decode.rs  mod.rs  reader.rs
src/raw/: header.rs  io.rs  item.rs  item_data.rs  mod.rs  point_op.rs
src/read/: header.rs  io.rs  item.rs  item_data.rs  mod.rs  point.rs
src/snapshots/: seeyou_cub__reader__tests__read_first_airspace.snap  seeyou_cub__reader__tests__read_header_from_fixture.snap  seeyou_cub__reader__tests__verify_string_decoding.snap
src/types/: airspace.rs  bounding_box.rs  datetime.rs  enums.rs  header.rs  item.rs  item_data.rs  mod.rs  point.rs  point_op.rs  raw_item_data.rs
src/utils/: byte_string.rs  io.rs  mod.rs
tests/: new_raw_api_test.rs  raw_api_test.rs  reader_test.rs
tests/fixtures/: france_2024.07.02.cub
tests/snapshots/: new_raw_api_test__raw_all_airspace_names.snap  new_raw_api_test__raw_class_counts.snap  new_raw_api_test__raw_first_item_data.snap  new_raw_api_test__raw_header.snap  new_raw_api_test__raw_items_first_5.snap  new_raw_api_test__raw_items_last_5.snap  new_raw_api_test__raw_last_item_data.snap  new_raw_api_test__raw_representative_largest_by_points.snap  new_raw_api_test__raw_representative_smallest_by_points.snap  new_raw_api_test__raw_style_counts.snap  raw_api_test__raw_all_airspace_names.snap  raw_api_test__raw_class_counts.snap  raw_api_test__raw_first_item_data.snap  raw_api_test__raw_header.snap  raw_api_test__raw_items_first_5.snap  raw_api_test__raw_items_last_5.snap  raw_api_test__raw_last_item_data.snap  raw_api_test__raw_representative_largest_by_points.snap  raw_api_test__raw_representative_smallest_by_points.snap  raw_api_test__raw_style_counts.snap  reader_test__airspaces_first_5.snap  reader_test__airspaces_last_5.snap  reader_test__all_airspace_names.snap  reader_test__class_counts.snap  reader_test__first_airspace.snap  reader_test__first_item_data.snap  reader_test__first_item_points.snap  reader_test__header.snap  reader_test__items_first_5.snap  reader_test__items_last_5.snap  reader_test__items_sample.snap  reader_test__last_airspace.snap  (+5 more)
(+31 files in other folders)
