[package]
name = "seeyou-cub"
version = "0.0.0"
description = "A Rust parser for the SeeYou CUB binary file format, which stores airspace data for flight navigation software"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Turbo87/seeyou-cub"
edition = "2024"
exclude = [".github/*", "benches/*", "docs/*", "examples/*", "tests/*", ".gitignore"]

[dependencies]

[package.metadata.release]
pre-release-commit-message = "Release v{{version}}"
tag-message = ""
