[package]
name = "seeyou-cub"
version = "0.0.0"
description = "A Rust parser for the SeeYou CUB binary file format, which stores airspace data for flight navigation software"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Turbo87/seeyou-cub"
edition = "2024"
exclude = [".github/*", "benches/*", "docs/*", "examples/*", "tests/*", ".gitignore"]

[dependencies]
encoding_rs = "0.8.35"
jiff = { version = "0.2.15", optional = true }
thiserror = "2.0.17"

[features]
default = []
datetime = ["jiff"]

[dev-dependencies]
insta = "=1.43.2"

[package.metadata.release]
pre-release-commit-message = "Release v{{version}}"
tag-message = ""
pre-release-replacements = [
    { file="README.md", search="seeyou-cub = \"[a-z0-9\\.-]+\"", replace="seeyou-cub = \"{{version}}\"" },
]
# Disable `cargo publish` since we use CI for publishing
publish = false
