[package]
name = "seeyou-cub"
version = "0.3.0"
description = "A Rust library for reading and writing the SeeYou CUB binary file format, which stores airspace data for flight navigation software"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Turbo87/seeyou-cub"
edition = "2024"
exclude = [".github/*", "benches/*", "docs/*", "examples/*", "tests/*", ".gitignore"]

[[bench]]
name = "high_level_reader"
harness = false

[[bench]]
name = "low_level_reader"
harness = false

[[bench]]
name = "high_level_writer"
harness = false

[[bench]]
name = "low_level_writer"
harness = false

[dependencies]
encoding_rs = "0.8.35"
thiserror = "2.0.17"

[dev-dependencies]
claims = "=0.8.0"
criterion = "=0.7.0"
insta = "=1.43.2"
serde_json = "=1.0.145"

[package.metadata.release]
pre-release-commit-message = "Release v{{version}}"
tag-message = ""
pre-release-replacements = [
    { file="README.md", search="seeyou-cub = \"[a-z0-9\\.-]+\"", replace="seeyou-cub = \"{{version}}\"" },
]
# Disable `cargo publish` since we use CI for publishing
publish = false
